GNOME Bugzilla – Bug 705667
vc1parse: some sequence layer handling fixes for advanced profile
Last modified: 2013-08-12 15:16:11 UTC
Created attachment 251153 [details] [review] vc1parse: Fix seq hdr STRUCT_A handling for advanced profile. Some patches to improve vc1parse seq_layer handling.
Created attachment 251154 [details] [review] vc1parse: Fix the SequenceLayer handling for advanced profile. The Sequence Header Data Structure STRUCT_C for Advanced Profile has only one valid field which is the profile indicator. Don't use the reserved fields for fps update like Simple/Main profile. Even with out this patch the code will work fine because the codecparser library won't try to read the reserved values of STRUCT_C for advanced profile by default. But this patch make it bit more clear and avoiding the if(..) execution completely for advanced profile.
Pushed, thanks: commit b4c52425f20a8c757a2f6939d7c0d6ae2fdc6a6b Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed Aug 7 15:01:33 2013 +0300 vc1parse: Fix the SequenceLayer handling for advanced profile. The Sequence Header Data Structure STRUCT_C for Advanced Profile has only a one valid field which is the profile indicator. Don't use the reserved fields for fps update like Simple/Main profile. https://bugzilla.gnome.org/show_bug.cgi?id=705667 commit ea213f826c4934681e77c6af348f069f5b04e456 Author: Sreerenj Balachandran <sreerenj.balachandran@intel.com> Date: Wed Aug 7 14:52:43 2013 +0300 vc1parse: Fix seq hdr STRUCT_A handling for advanced profile. The Sequence Header Data Structure STRUCT_A for advanced profile may be eight consecutive zero bytes.Don't try to override the width and height values in this case. https://bugzilla.gnome.org/show_bug.cgi?id=705667