gst/videoparsers/gstvc1parse.c
@@ -1415,7 +1415,8 @@ gst_vc1_parse_handle_seq_layer (GstVC1Parse * vc1parse,
 
   width = vc1parse->seq_layer.struct_a.vert_size;
   height = vc1parse->seq_layer.struct_a.horiz_size;
-  if (vc1parse->width != width || vc1parse->height != height) {
+  if (width > 0 && height > 0
+      && (vc1parse->width != width || vc1parse->height != height)) {
     vc1parse->update_caps = TRUE;
     vc1parse->width = width;
     vc1parse->height = height;
